[project]
name = "torcharc"
version = "2.0.0"
description = "Build PyTorch networks by specifying architectures."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.0",
    "pydantic>=2.10.4",
    "pydash>=8.0.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
pytorch = [
  "torch>=2.5.1",
  "torchvision>=0.20.1",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "platform_system != 'Darwin'"},
]
torchvision = [
  { index = "pytorch-cu124", marker = "platform_system != 'Darwin'"},
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.3",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
]

[tool.pytest.ini_options]
addopts = [
    "--cov=torcharc",
    "--cov-report=html",
    "--cov-report=term",
]
filterwarnings = "ignore"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
